--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/pylint.png")'></div>
 						Pylint, Warnings e Correções
 					</a></li>
+
+					<li><a href='spa.html'>
+						<div class='thumb' style='background-image:url("_images/Eau_Rouge_1997.jpg")'></div>
+						SPA
+					</a></li>
 				</ul>
 			</div>
 		</div>
