the how to do it will be a demo

--- a/spa.html
+++ b/spa.html
@@ -88,12 +88,12 @@ div.code {
 						<div id='spa-1'></div>
 					</section>
 
-					<section>
+					<section data-transition="slide" data-background-transition="fade">
 						<h2>Modelo SPA</h2>
 						<div id='spa-2'></div>
 					</section>
 
-					<section>
+					<section data-transition="slide" data-background-transition="fade">
 						<h2>Modelo SPA</h2>
 						<div id='spa-3'></div>
 					</section>
@@ -104,6 +104,10 @@ div.code {
 						<p>Bacana, mas...</p>
 
 						<h2>Como Faiz?</h2>
+					</section>
+
+					<section>
+						<img src='_images/demotimeheader2.png'>
 					</section>
 				</section>
 
