added a real example and the finisher

--- a/spa.html
+++ b/spa.html
@@ -232,8 +232,15 @@ http://meuservidor/servico#/usuario/1040
 						</div>
 
 						<p class='fragment'>BEEEM melhor, não?</p>
+
+						<p class='fragment'>Exemplo do Gmail:
+							<code>https://mail.google.com/mail/u/1/#all/14841018b0ce8bb1</code></p>
 					</section>
 				</section>
+
+                <section data-background='_images/thats-all-folks.jpg'>
+                    <section></section>
+                </section>
 			</div>
 		</div>
 
