added noconflict to the index; changed the names to make them fit the image sizes

--- a/index.html
+++ b/index.html
@@ -77,17 +77,22 @@ ul.inline-list li {
 
 					<li><a href='ajax-sosp-cors-csrf.html'>
 						<div class='thumb' style='background-image:url("_images/ajax-sosp-cors-csrf.png")'></div>
-						AJAX/SOSP/CORS/CSRF
+						SOSP/CORS
 					</a></li>
 
 					<li><a href='pylint.html'>
 						<div class='thumb' style='background-image:url("_images/pylint.png")'></div>
-						Pylint, Warnings e Correções
+						Pylint
 					</a></li>
 
 					<li><a href='spa.html'>
 						<div class='thumb' style='background-image:url("_images/Eau_Rouge_1997.jpg")'></div>
 						SPA
+					</a></li>
+
+					<li><a href='noconflict.html'>
+						<div class='thumb' style='background-image:url("_images/jquery_noconflict.jpg")'></div>
+						$.noConflict()
 					</a></li>
 				</ul>
 			</div>
