more stuff about good practices

--- a/good-practices.html
+++ b/good-practices.html
@@ -57,7 +57,7 @@
 
 				<section>
 					<h2>Quem sou eu?</h2>
-					<aside>Explicar porque me ouvir.</aside>
+					<aside class='notes'>Explicar porque me ouvir.</aside>
 				</section>
 
 				<section>
@@ -66,27 +66,27 @@
 
 				<section>
 					<h2>TDD</h2>
-					<aside>Meio plug para agile: Test cases dos
+					<aside class='notes'>Meio plug para agile: Test cases dos
 						cases definidos anteriormente.</aside>
-					<aside>Test case vs unit testing.</aside>
-					<aside>O problema dos mocks.</aside>
+					<aside class='notes'>Test case vs unit testing.</aside>
+					<aside class='notes'>O problema dos mocks.</aside>
 				</section>
 
 				<section>
 					<h2>Testes e Abstrações</h2>
-					<aside>A história do Ruby camp das 99 garrafas
+					<aside class='notes'>A história do Ruby camp das 99 garrafas
 						de cerveja na parede.</aside>
 				</section>
 
 				<section>
 					<h2>Documentação e Comentários</h2>
-					<aside>Pra que serve um e pra que serve o outro.</aside>
-					<aside>Quanto documentar.</aside>
+					<aside class='notes'>Pra que serve um e pra que serve o outro.</aside>
+					<aside class='notes'>Quanto documentar.</aside>
 				</section>
 
 				<section>
 					<h2>McCabe e Complexidade Ciclomática</h2>
-					<aside>Thmas J. McCabe Sr, 1976</aside>
+					<aside class='notes'>Thomas J. McCabe Sr, 1976</aside>
 				</section>
 
 				<section>
@@ -95,13 +95,23 @@
 
 				<section>
 					<h2>Liquidificador: DRY, documentação, McCabe</h2>
-					<aside>Adicionar comentários para o que fazer, 
+					<aside class='notes'>Adicionar comentários para o que fazer, 
 						transformar comentários em código.</aside>
 				</section>
 
 				<section>
 					<h2>Logging</h2>
-					<aside>Por que, quando, níveis e custos.</aside>
+					<aside class='notes'>Por que, quando, níveis e custos.</aside>
+				</section>
+
+				<section>
+					<h2>Olhe Para os Lados</h2>
+					<aside class='notes'>
+						"A programming language that doesn't
+						change the way you think is not worth
+						learning."
+						Alan Perlis
+					</aside>
 				</section>
 			</div>
 		</div>
