quick note about tests

--- a/good-practices.html
+++ b/good-practices.html
@@ -70,6 +70,8 @@
 						cases definidos anteriormente.</aside>
 					<aside class='notes'>Test case vs unit testing.</aside>
 					<aside class='notes'>O problema dos mocks.</aside>
+					<aside class='notes'>Ordenação, todos testes vs
+						testes únicos.</aside>
 				</section>
 
 				<section>
