--- a/good-practices.html
+++ b/good-practices.html
@@ -107,6 +107,12 @@
 				</section>
 
 				<section>
+					<h2>Controle de Versões</h2>
+					<aside class='notes'>O que é, o que comitar, quando
+						comitar.</aside>
+				</section>
+
+				<section>
 					<h2>Olhe Para os Lados</h2>
 					<aside class='notes'>
 						"A programming language that doesn't
