need to talk about the project documentation, not just code documentation

--- a/good-practices.html
+++ b/good-practices.html
@@ -84,6 +84,8 @@
 					<h2>Documentação e Comentários</h2>
 					<aside class='notes'>Pra que serve um e pra que serve o outro.</aside>
 					<aside class='notes'>Quanto documentar.</aside>
+					<aside class='notes'>Documentação global do projeto, não
+						apenas de código.</aside>
 				</section>
 
 				<section>
