more about standards and lints

--- a/good-practices.html
+++ b/good-practices.html
@@ -61,7 +61,13 @@
 				</section>
 
 				<section>
-					<h2>Padrões, Lints e convenções</h2>
+					<h2>Convenções e Lints</h2>
+					<aside class='notes'>Convenções variam de linguagem pra
+						linguagem.</aside>
+					<aside class='notes'>Pep8</aside>
+					<aside class='notes'>SEMPRE usar lints.</aside>
+					<aside class='notes'>Warnings não são erros,
+						mas deveriam.</aside>
 				</section>
 
 				<section>
