we need to talk about coverage

--- a/good-practices.html
+++ b/good-practices.html
@@ -78,6 +78,7 @@
 					<aside class='notes'>O problema dos mocks.</aside>
 					<aside class='notes'>Ordenação, todos testes vs
 						testes únicos.</aside>
+					<aside class='notes'>Coverage</aside>
 				</section>
 
 				<section>
