a new topic about data and code

--- a/good-practices.html
+++ b/good-practices.html
@@ -122,6 +122,14 @@
 				</section>
 
 				<section>
+					<h2>Dados e Códigos</h2>
+					<aside class='notes'>O que deve ir para o banco e o
+						que nunca deve ir para o banco.</aside>
+					<aside class='notes'>O que se "reaje" em forma de código
+						deve permanecer em código.</aside>
+				</section>
+
+				<section>
 					<h2>Olhe Para os Lados</h2>
 					<aside class='notes'>
 						"A programming language that doesn't
