also, about how to deal with the data

--- a/good-practices.html
+++ b/good-practices.html
@@ -127,6 +127,7 @@
 						que nunca deve ir para o banco.</aside>
 					<aside class='notes'>O que se "reaje" em forma de código
 						deve permanecer em código.</aside>
+					<aside class='notes'>Não fazer startswith()/endswith()/in</aside>
 				</section>
 
 				<section>
