first steps into the normal mode

--- a/vim.html
+++ b/vim.html
@@ -58,6 +58,58 @@
 				<section data-background='_images/vim.png'>
 					<h1 class='semi-opaque'>VIM</h1>
 				</section>
+
+				<section>
+					<section>
+						<h2>Modos</h2>
+
+						<img src='_images/modes.jpg'>
+					</section>
+
+					<section>
+						<ul>
+							<li>Modo normal</li>
+							<li class='fragment'>Modo de inserção</li>
+							<li class='fragment'>Modo de comando</li>
+							<li class='fragment'>Modo visual</li>
+							<li class='fragment'>Modo ex</li>
+							<li class='fragment'>Modo de pesquisa</li>
+						</ul>
+
+						<p class='fragment'>... e os menos conhecidos...</p>
+
+						<ul>
+							<li class='fragment'>Modo de esperando pesquisa</li>
+							<li class='fragment'>Modo de espera de comando</li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Modo normal</h2>
+						<img src="_images/normal12.jpg" alt=""/>
+					</section>
+
+					<section>
+						<p>O modo normal é o modo que o VIM inicia.</p>
+
+						<p>
+							Nele é possível movimentar o cursor, copiar e colar,
+							entrar em modo de inserção, entrar em modo de pesquisa,
+							entrar em modo de comando, entrar em modo visual, ...
+						</p>
+					</section>
+
+					<section>
+						<h3>Movimentação</h3>
+
+						<p>"Você só pode movimentar no texto usando <code>h</code>, 
+							<code>j</code>, <code>k</code> e <code>l</code>".</p>
+
+						<img src="_images/credit-card-lies.jpg" alt="" class='fragment'/>
+					</section>
+				</section>
 			</div>
 		</div>
 
@@ -74,7 +126,7 @@
 				history: true,
 				center: true,
 
-				theme: 'default',
+				theme: 'night',
 				transition: 'linear',
 
 				// Optional libraries used to extend on reveal.js
