--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@ ul.inline-list li {
 						<div class='thumb' style='background-image:url("_images/jquery_noconflict.jpg")'></div>
 						$.noConflict()
 					</a></li>
+
+					<li><a href='tdc2015.html'>
+						<div class='thumb' style='background-image:url("_images/tdc-logo-post.png")'></div>
+						TDC Agile
+					</a></li>
 				</ul>
 			</div>
 		</div>
